--- a/etc/rsyslog.d/transmissionbt.log.conf
+++ b/etc/rsyslog.d/transmissionbt.log.conf
@@ -1,7 +1,5 @@
-# This goes into /etc/rsyslog.d/
-
-# All log-entries from transmission-daemon are going into /var/log/transmissionbt.log
+# All log-entries from transmission-daemon are going into /var/log/transmissionbt.log.
 :programname, isequal, "transmission-daemon" /var/log/transmissionbt.log
 
-# the line below is for the log output ONLY in /var/log/transmissionbt.log
+# Stop processing the message after being written to the log. Stops it from reach the local logging.
 & ~
